adding enos gravatar url

--- a/_includes/css/avatars.css
+++ b/_includes/css/avatars.css
@@ -27,3 +27,7 @@
   .avatar.avatar-mitch{
     background: url(http://www.gravatar.com/avatar/713d5b40037d18409eb08cc47e5aaf60.png?s=120) no-repeat;
   }
+
+  .avatar.avatar-enos{
+    background: url(http://www.gravatar.com/avatar/c7a17ec3884c630103c2e7da91765c80.png?s=120) no-repeat;
+  }
