--- a/_includes/css/avatars.css
+++ b/_includes/css/avatars.css
@@ -15,9 +15,12 @@
   display: inline-block;
   width: 120px;
   height: 120px;
-  border-radius: 60px;
-  -webkit-border-radius: 60px;
-  -moz-border-radius: 60px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-style: solid;
+  border-color: white;
+  border-width: 4px;
   }
 
   .avatar.avatar-mauro{
