--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,5 +64,6 @@
         ga('send', 'pageview');
     </script>
   {% endif %}
+  <script type="text/javascript" id="cookiebanner" src="http://cookiebanner.eu/js/cookiebanner.min.js" data-moreinfo="/privacy"></script>
   </body>
 </html>
