--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,8 @@
           <p class="view"><a href="{{ site.github.owner_url }}">View on GitHub</a></p>
         {% endif %}
 
+          <p class="view"><a href="/privacy">Privacy</a></p>
+
         {% if site.show_downloads %}
           <ul>
             <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
