--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
       <p class="view"><a href="/privacy">Privacy</a></p>
 
-      <p class="view"><img href="/img/logo.png" alt="Radical logo" /></p>
+      <p class="view"><img src="/img/logo.png" alt="Radical logo" /></p>
 
       {% if site.show_downloads %}
       <ul>
