--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
 
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" href="Radical-Logo-256-transaprent.png">
   <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
   <meta name="viewport" content="width=device-width"> {% if site.keywords %}
   <meta name="keywords" content="{{ site.keywords }}"> {% endif %}
